--- a/app/views/navbar/_index.html.erb
+++ b/app/views/navbar/_index.html.erb
@@ -4,7 +4,7 @@
 		<div class="collapse navbar-collapse">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="<%= root_path %>">Deputados</a>
+						<a class="nav-link active" aria-current="page" href="<%= root_path %>">Inicío</a>
 				</li>
 			</ul>
 			<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#fileModal">Upload do Arquivo</button>
