Views to show expenses

--- a/app/views/deputies/index.html.erb
+++ b/app/views/deputies/index.html.erb
@@ -29,7 +29,7 @@
 										<div class="card-body">
 											<p class="card-title"><strong><%= deputy.tx_nome_parlamentar %></strong></p>
 											<p class="card-text">Partido: <%= deputy.sg_partido %></p>
-											<%= link_to "Ver mais", deputy_path(deputy), class: "btn btn-primary text-end" %>
+											<%= link_to "Despesas", expenses_path(deputy), class: "btn btn-primary text-end" %>
 										</div>
 									</div>
 								</div>
