--- a/app/views/deputies/index.html.erb
+++ b/app/views/deputies/index.html.erb
@@ -20,7 +20,8 @@
 							<div class="card mb-3" style="max-width: 540px;">
 								<div class="row g-0">
 									<div class="col-md-4">
-										<img src="<%= deputy.foto %>" class="img-fluid rounded-start" alt="Deputados do Piauí">
+										<img src="<%= deputy.foto %>" class="img-fluid rounded-start" 
+										alt="Foto mostrando o(a) rosto do(a) deputado(a) do Estado do Piauí">
 									</div>
 									<div class="col-md-8">
 										<div class="card-body">
