--- a/app/views/file_uploads/_form.html.erb
+++ b/app/views/file_uploads/_form.html.erb
@@ -2,17 +2,17 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="fileModal">Upload do Arquivo</h5>
+        <h5 class="modal-title" id="fileModal"><%= t('.title') %></h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <%= form_for @file_upload do |form| %>
           <div class="input-group mb-3">
             <%= form.file_field :csv_file, class: "form-control", accept: ".csv" %>
-            <%= form.label "Upload", class: "input-group-text" %>
+            <%= form.label t('.upload'), class: "input-group-text" %>
           </div>
           <div class="d-flex justify-content-end">
-            <%= form.submit "Enviar", class: "btn btn-primary" %>
+            <%= form.submit t('.submit'), class: "btn btn-primary" %>
           </div>
         <% end %>
       </div>
