--- a/app/views/flash/_index.html.erb
+++ b/app/views/flash/_index.html.erb
@@ -1,5 +1,19 @@
-<% if flash[:alert] %>
+<% if flash[:notice].present? %>
+	<div class="alert alert-success alert-dismissible fade show">
+			<strong><%= flash[:notice] %></strong>
+			<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+	</div>
+
 	<script>
-		alert("<%= flash[:alert] %>")
+		setTimeout(function(){
+			window.location.reload();
+		}, 50000);
 	</script>
+<% end %>
+
+<% if flash[:alert].present? %>
+	<div class="alert alert-warning alert-dismissible fade show">
+		<strong><%= flash[:alert] %></strong>
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+	</div>
 <% end %>
